@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - DeprecatedFeatures will now consider "use UNIVERSAL;" a policy violation
 
 0.016     2016-07-02 17:53:20 EDT
   - Support <<>> operator in WhileDiamondDefaultAssignment policy
